[package]
name = "gacha-url-hunter-cli"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gacha-url-hunter = {path = "gacha-url-hunter"}
inquire = "0.6.2"
spinners = "4.1.1"
arboard = "3.3.0"
