[package]
name = "gacha-url-hunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
url = "2.5.0"
urlencoding = "2.1.3"
reqwest = { version = "0.11.23" , features = ["default-tls", "blocking", "json"], default-features = false }
serde = { version = "1.0.194", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
